k-clusters/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-srv
spec:
  selector:
    app.kubernetes.io/name: app-srv
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
