k-clusters/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app-srv.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-srv
            port:
              number: 8080
